<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/profile_picture_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_picture"
        app:layout_constraintBottom_toTopOf="@+id/profile_name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/profile_name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:hint="@string/name_entry_hint"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        android:autofillHints="name"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/profile_description_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="description"
        android:gravity="start|top"
        android:hint="@string/description_entry_hint"
        android:inputType="textMultiLine"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="8dp"
        style="@style/EditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_edittext"
        tools:ignore="VisualLintTextFieldSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
