<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_collection_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.browser.UserCollectionFragment"
    android:theme="@style/Theme.Tarjetakuna.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SearchView
            android:id="@+id/user_collection_searchbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="4dp" />

        <Button
            android:id="@+id/user_collection_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browser_filter"
            android:layout_margin="4dp" />

        <Button
            android:id="@+id/user_collection_sort_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browser_sort"
            android:layout_margin="4dp" />


        <ImageButton
            android:id="@+id/user_collection_clear_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/browser_clear_filters" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/user_collection_filter_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_collection_filter_by_set_textview"
                style="@style/DescriptionStyleItalic"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/browser_filter_by_set" />

            <EditText
                android:id="@+id/user_collection_filter_by_set_edittext"
                style="@style/EditTextStyle"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:hint="@string/browser_enter_set_code"
                android:autofillHints="@string/browser_enter_set_code"
                android:inputType="text" />

            <Button
                android:id="@+id/user_collection_filter_by_set_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:text="@string/browser_apply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_collection_filter_by_mana_textview"
                style="@style/DescriptionStyleItalic"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/browser_filter_by_mana" />

            <EditText
                android:id="@+id/user_collection_filter_by_mana_edittext"
                style="@style/EditTextStyle"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:hint="@string/browser_enter_manacost"
                android:autofillHints="@string/browser_enter_manacost"
                android:inputType="text" />

            <Button
                android:id="@+id/user_collection_filter_by_mana_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:text="@string/browser_apply" />

        </LinearLayout>

        <!-- Add your filter options here -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_collection_sort_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/user_collection_sort_by_name_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/browser_sort_by_name"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/user_collection_sort_by_mana_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/browser_sort_by_mana"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/user_collection_sort_by_rarity_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/browser_sort_by_rarity"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/user_collection_sort_by_set_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/browser_sort_by_set"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_collection_list_cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="30dp" />

</LinearLayout>
