...
        android:id="@+id/nav_authentication"
        android:name="com.github.sdp.tarjetakuna.ui.authentication.AuthenticationFragment"
        android:label="@string/menu_authentication"
        tools:layout="@layout/fragment_authentication" />

    <fragment
        android:id="@+id/nav_single_card"
        android:name="com.github.sdp.tarjetakuna.ui.singlecard.SingleCardFragment"
        android:label="@string/menu_single_card"
        tools:layout="@layout/fragment_single_card" />

    <fragment
        android:id="@+id/nav_single_set"
...
